--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="finish">Finish</string>
     <string name="check">Check success</string>
     <string name="titlemenu">Enter Class ID</string>
+    <string name="chooseDir2Sync">Choose Class to Sync</string>
 </resources>
