--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="check">Check success</string>
     <string name="titlemenu">Enter Class ID</string>
     <string name="chooseDir2Sync">Choose Class to Sync</string>
+    <string name="nameApp">Check In</string>
 </resources>
